Sugati/src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Add_administrative_flight_information__c</fullName>
        <inlineHelpText>Add administrative flight information (APIS, SSR) into Amadeus PNR</inlineHelpText>
        <label>Add administrative flight information</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Add_birthdays_and_other__c</fullName>
        <inlineHelpText>Add birthdays and other significant information to CRM</inlineHelpText>
        <label>Add birthdays and other</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Add_principal_dates_and_reservations__c</fullName>
        <inlineHelpText>Add principal dates and reservation numbers to client calendar</inlineHelpText>
        <label>Add principal dates and reservations</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Adult_Old__c</fullName>
        <description>Historical Data</description>
        <inlineHelpText>Historical Data</inlineHelpText>
        <label>Adult Old</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agent_Name__c</fullName>
        <description>Agent name for OTUK</description>
        <formula>O_Agent_SC__r.SC_First_Name__c &amp; &quot; &quot;&amp;  O_Agent_SC__r.SC_Last_Name__c</formula>
        <label>Agent Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ask_for_insurance_from_client__c</fullName>
        <label>Ask for insurance from client</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Ask_for_upgrades__c</fullName>
        <inlineHelpText>Ask for upgrades, special treatments, make aware of VIP to suppliers.</inlineHelpText>
        <label>Ask for upgrades</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Balance_paid_reminder__c</fullName>
        <inlineHelpText>Set own reminder to check balance paid, if not, send balance reminder to clients.</inlineHelpText>
        <label>Balance paid reminder</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Booking_Form_Received_Date__c</fullName>
        <label>Booking Form Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Booking_Form_Sent_Date__c</fullName>
        <description>Enter the date when a Booking Form was sent.</description>
        <label>Booking Form Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Budget_Note__c</fullName>
        <label>Budget Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_ATOL_issued_correctly__c</fullName>
        <label>Check ATOL issued correctly</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Check_booking_form__c</fullName>
        <inlineHelpText>Checking booking form against booking made - highlight discrepencies and ensure they have been death with.</inlineHelpText>
        <label>Check booking form</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Check_completed_tasks__c</fullName>
        <inlineHelpText>Work against checklists for each booking to ensure all tasks completed.</inlineHelpText>
        <label>Check completed tasks</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Check_emergency_phone_list__c</fullName>
        <label>Check emergency phone list</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Check_flight_booking__c</fullName>
        <inlineHelpText>Check flight booking details in Amadeus/with supplier</inlineHelpText>
        <label>Check flight booking</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Check_supplier_confirmation__c</fullName>
        <inlineHelpText>Check supplier confirmation against booking made.</inlineHelpText>
        <label>Check supplier confirmation</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Check_supplier_payments__c</fullName>
        <inlineHelpText>Check payments made to suppliers</inlineHelpText>
        <label>Check supplier payments</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Check_visa_and_inoculation_plann__c</fullName>
        <inlineHelpText>Check on Client visa an inoculation action plan</inlineHelpText>
        <label>Check visa and innoculation plan</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Commission_Paid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Finance team can check if the commission has been paid to agency</description>
        <inlineHelpText>Check if the commission has been paid</inlineHelpText>
        <label>Commission Paid?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Concierge_phone_call__c</fullName>
        <label>Concierge phone call</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Confirm_Supplier_arrangements__c</fullName>
        <inlineHelpText>Confirm arrangements with suppliers.</inlineHelpText>
        <label>Confirm Supplier arrangements</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Confirmation_documents__c</fullName>
        <inlineHelpText>Create confirmation documents</inlineHelpText>
        <label>Confirmation documents</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Copy_of_Big_Short_Break_book__c</fullName>
        <label>Copy of Big Short Break book</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Costing_Type__c</fullName>
        <label>Costing Method</label>
        <picklist>
            <picklistValues>
                <fullName>Selling Price Adjustment</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Granular Mark Up</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeliveryInstallationStatus__c</fullName>
        <label>Delivery/Installation Status</label>
        <picklist>
            <picklistValues>
                <fullName>In progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yet to begin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Diarise_all_next_steps__c</fullName>
        <inlineHelpText>Diarise all next steps for client actions.</inlineHelpText>
        <label>Diarise all next steps</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Exchange_check__c</fullName>
        <formula>IF (  O_Exchange_Rate__r.Name = null, False, True)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exchange check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_night_tax__c</fullName>
        <label>First night tax</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GBP_Margin_Value__c</fullName>
        <formula>IF ( Exchange_check__c = True, O_Margin__c  *  O_Exchange_Rate__r.ER_Exchange_Rate__c, O_Margin__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GBP Margin Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MainCompetitors__c</fullName>
        <label>Main Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Margin_Flag__c</fullName>
        <formula>IF(O_Suggested_Margin_Value__c &lt;  O_Margin_Value_With_Commission__c ,  IMAGE(&quot;https://c.eu5.content.force.com/servlet/servlet.FileDownload?file=01524000001UC4I&quot;, &quot;Margin Green&quot;, 20,140), 
 IMAGE(&quot;https://c.eu5.content.force.com/servlet/servlet.FileDownload?file=01524000001UC51&quot;, &quot;Margin Red&quot;, 20,140))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Margin Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>O_APC_Charges__c</fullName>
        <label>APC Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>O_APC_or_FFP_Non_Licensable_Charges__c</fullName>
        <label>APC or FFP Non Licensable Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>O_ATOL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ATOL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>O_Additional_Reps_Agents_Arrival_report__c</fullName>
        <label>Additional Reps/ Agents Arrival report</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>O_Adult__c</fullName>
        <inlineHelpText>Total no of adults in a given family.</inlineHelpText>
        <label>Adult</label>
        <summaryFilterItems>
            <field>Group_Member__c.GM_Occupancy_Type__c</field>
            <operation>equals</operation>
            <value>Adult</value>
        </summaryFilterItems>
        <summaryForeignKey>Group_Member__c.GM_Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>O_Agent_Commission_Amount__c</fullName>
        <label>Agent Commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>O_Agent_Commission_Due_Date__c</fullName>
        <formula>IF(  ISBLANK(O_Agent_Commission__c), null , O_Return_Date__c + 10 )</formula>
        <label>Agent Commission Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>O_Agent_Commission_Type__c</fullName>
        <label>Agent Commission Type</label>
        <picklist>
            <picklistValues>
                <fullName>Margin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revenue</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>O_Agent_Commission__c</fullName>
        <formula>IF((!ISBLANK(O_Agent_Commission_Amount__c) &amp;&amp; ISBLANK(O_Agent_Commission_percent__c)), 
	O_Agent_Commission_Amount__c, 

	IF((!ISBLANK(O_Agent_Commission_percent__c) &amp;&amp; ISBLANK(O_Agent_Commission_Amount__c)),
                 IF(ISPICKVAL(O_Agent_Commission_Type__c , &apos;Margin&apos;),((O_Agent_Commission_percent__c/100)* O_Margin__c ), ((O_Agent_Commission_percent__c/100)*Amount))
,

IF((ISBLANK(O_Agent_Commission_Amount__c) &amp;&amp; ISBLANK(O_Agent_Commission_percent__c)) ,if(!ISBLANK(O_Agent__r.S_Commission_Value__c),O_Agent__r.S_Commission_Value__c,if(!ISBLANK(O_Agent__r.S_Commission_Value__c),O_Agent__r.S_Commission_Value__c,IF(ISPICKVAL(O_Agent_Commission_Type__c , &apos;Margin&apos;),((O_Agent__r.S_Commission__c)* O_Margin__c ), ((O_Agent__r.S_Commission__c)*Amount)) 
	)
	),null) 

 ))</formula>
        <label>Agent Commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>O_Agent_Commission_percent__c</fullName>
        <label>Agent Commission %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>O_Agent_SC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agent</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Supplier_Contact__c.SC_Supplier__c</field>
                <operation>equals</operation>
                <valueField>$Source.O_Agent__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Supplier_Contact__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>O_Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Choose an agent if this is an agent booking.</inlineHelpText>
        <label>Agency</label>
        <referenceTo>Supplier__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>O_Ancillary_Charges__c</fullName>
        <label>Ancillary Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>O_Arrival_Presents__c</fullName>
        <label>Arrival Presents</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>O_Arrival_gift__c</fullName>
        <label>Arrival gift</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>O_Automated_survey_opt_out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Andy has requested this on 20th</description>
        <label>Automated survey opt-out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>O_Bond_Type__c</fullName>
        <label>Bond Type</label>
        <picklist>
            <picklistValues>
                <fullName>Licenced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unlicenced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accommodation only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not protected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>O_Booking_Currency__c</fullName>
        <label>Booking Currency</label>
        <picklist>
            <picklistValues>
                <fullName>GBP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>O_Booking_Date__c</fullName>
        <label>Booking Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>O_Booking_Month__c</fullName>
        <formula>IF(MONTH(O_Booking_Date__c) = 1, &quot;January&quot;, 
IF(MONTH(O_Booking_Date__c) = 2, &quot;February&quot;, 
IF(MONTH(O_Booking_Date__c) = 3, &quot;March&quot;, 
IF(MONTH(O_Booking_Date__c) = 4, &quot;April&quot;, 
IF(MONTH(O_Booking_Date__c) = 5, &quot;May&quot;, 
IF(MONTH(O_Booking_Date__c) = 6, &quot;June&quot;, 
IF(MONTH(O_Booking_Date__c) = 7, &quot;July&quot;, 
IF(MONTH(O_Booking_Date__c) = 8, &quot;August&quot;, 
IF(MONTH(O_Booking_Date__c) = 9, &quot;September&quot;, 
IF(MONTH(O_Booking_Date__c) = 10, &quot;October&quot;, 
IF(MONTH(O_Booking_Date__c) = 11, &quot;November&quot;, 
IF(MONTH(O_Booking_Date__c) = 12, &quot;December&quot;, 
&quot;&quot;))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Booking Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>O_Booking_Note_Internal__c</fullName>
        <label>Booking Note (Internal)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>O_Booking_Number__c</fullName>
        <description>This is the field from the old system.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the field from the old system.</inlineHelpText>
        <label>Dhruv Booking No</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>O_Booking_Stat_Code__c</fullName>
        <label>Booking Stat Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>O_Booking_Week_Actual__c</fullName>
        <formula>CEILING(((O_Booking_Date__c - DATE(YEAR(O_Booking_Date__c ), 1, 1) + 1) +
MOD(DATE(YEAR(O_Booking_Date__c ), 1, 1) - DATE(1900, 1, 7), 7)) / 7)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Booking Week Actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>O_Booking_Week__c</fullName>
        <label>Booking Week</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>O_Booking_Year__c</fullName>
        <formula>YEAR( O_Booking_Date__c )</formula>
        <label>Booking Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>O_Booking_to_Departure__c</fullName>
        <formula>O_Departure_Date__c -  O_Booking_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Booking to Departure</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>O_Break_Through_No__c</fullName>
        <label>Break Through No</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>O_Budget_End_Range__c</fullName>
        <label>Budget End Range</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>O_Budget_Start_Range__c</fullName>
        <label>Budget Range</label>
        <picklist>
            <picklistValues>
                <fullName>0 - 1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1000 - 3000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3000 - 5000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5000 - 10000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10000 - 20000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20000+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>O_Budget__c</fullName>
        <label>Budget</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>O_Budget_specify__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget specify</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>O_Charity__c</fullName>
        <label>Charity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>O_Charity_contribution__c</fullName>
        <label>Charity contribution</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>O_Child_Old__c</fullName>
        <label>Child Old</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>O_Children__c</fullName>
        <label>Children</label>
        <summaryFilterItems>
            <field>Group_Member__c.GM_Occupancy_Type__c</field>
            <operation>equals</operation>
            <value>Child</value>
        </summaryFilterItems>
        <summaryForeignKey>Group_Member__c.GM_Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>O_Cleaned_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does this come from Nick&apos;s excel sheets?</description>
        <inlineHelpText>Does this come from Nick&apos;s excel sheets?</inlineHelpText>
        <label>Cleaned Data?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>O_Company_Code__c</fullName>
        <label>Company Code</label>
        <picklist>
            <picklistValues>
                <fullName>OTDV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTUK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TBUK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STUK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTGB</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>O_Continent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region</label>
        <referenceTo>Continent__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>O_Converted_to_Booking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Converted to Booking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>O_Converted_to_Quote__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Converted to Quote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>O_Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>O_Credit_Card_Charges_Amount__c</fullName>
        <label>Credit Card Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>O_Credit_Card_Charges_P__c</fullName>
        <label>Credit Card Charges %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>O_Credit_Card_Charges__c</fullName>
        <formula>Amount* O_Credit_Card_Charges_P__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Card Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>O_Days_to_Departure__c</fullName>
        <formula>IF(  AND(TEXT(StageName) &lt;&gt; &quot;Enquiry gone cold&quot;,O_Departure_Date__c &gt; DATEVALUE(Now())) , O_Departure_Date__c - DATEVALUE(Now()), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>IF( TEXT(StageName) &lt;&gt; &quot;Enquiry gone cold&quot; , O_Departure_Date__c - DATEVALUE(Now()), 0)</inlineHelpText>
        <label>Days to Departure</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>O_Departure_Date__c</fullName>
        <label>Departure Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>O_Departure_Month__c</fullName>
        <formula>IF(MONTH(O_Departure_Date__c) = 1, &quot;January&quot;, 
IF(MONTH(O_Departure_Date__c) = 2, &quot;February&quot;, 
IF(MONTH(O_Departure_Date__c) = 3, &quot;March&quot;, 
IF(MONTH(O_Departure_Date__c) = 4, &quot;April&quot;, 
IF(MONTH(O_Departure_Date__c) = 5, &quot;May&quot;, 
IF(MONTH(O_Departure_Date__c) = 6, &quot;June&quot;, 
IF(MONTH(O_Departure_Date__c) = 7, &quot;July&quot;, 
IF(MONTH(O_Departure_Date__c) = 8, &quot;August&quot;, 
IF(MONTH(O_Departure_Date__c) = 9, &quot;September&quot;, 
IF(MONTH(O_Departure_Date__c) = 10, &quot;October&quot;, 
IF(MONTH(O_Departure_Date__c) = 11, &quot;November&quot;, 
&quot;December&quot;)))))))))))</formula>
        <label>Departure Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>O_Departure_Year__c</fullName>
        <formula>YEAR(O_Departure_Date__c )</formula>
        <label>Departure Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>O_Deposit_Due_Date__c</fullName>
        <formula>O_Departure_Date__c - 70</formula>
        <label>Deposit Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>O_Deposit_Required1__c</fullName>
        <label>Deposit Required</label>
        <summarizedField>Client_Group__c.CG_Deposit_Required_I__c</summarizedField>
        <summaryForeignKey>Client_Group__c.CG_Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>O_Destination_Map_Image_ID__c</fullName>
        <label>Destination Map Image ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>O_Destination__c</fullName>
        <label>Destination</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>O_Display_Due_Date__c</fullName>
        <inlineHelpText>x number of days before Departure Date. To be used only to overwrite the standard 60 days before departure date.</inlineHelpText>
        <label>Display Due Date</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>O_Division__c</fullName>
        <description>Group ownership</description>
        <inlineHelpText>Group ownership</inlineHelpText>
        <label>Division</label>
        <picklist>
            <picklistValues>
                <fullName>Original Travel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Original Diving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Simoon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OT UK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Combination of above</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>O_Due_By_Date__c</fullName>
        <formula>O_Due_Date__c - TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due By Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>O_Due_Date__c</fullName>
        <description>IF( O_Display_Due_Date__c&gt; 60 , O_Departure_Date__c - 90, O_Departure_Date__c - 60)</description>
        <formula>IF(  ISNULL(O_Display_Due_Date__c) , O_Departure_Date__c - 60, O_Departure_Date__c - O_Display_Due_Date__c)</formula>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>O_Duration_End_Days__c</fullName>
        <label>Duration End Days</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>O_Duration_Start_Days__c</fullName>
        <label>Duration Start Days</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>O_EU__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the holiday in EU country?</description>
        <inlineHelpText>Is the holiday in EU country?</inlineHelpText>
        <label>EU</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>O_Emergency_Contact_Number__c</fullName>
        <label>Emergency Contact Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>O_Enquiry_Month__c</fullName>
        <formula>IF(MONTH(CloseDate) = 1, &quot;January&quot;, 
IF(MONTH(CloseDate) = 2, &quot;February&quot;,
IF(MONTH(CloseDate) = 3, &quot;March&quot;,
IF(MONTH(CloseDate) = 4, &quot;April&quot;,
IF(MONTH(CloseDate) = 5, &quot;May&quot;,
IF(MONTH(CloseDate) = 6, &quot;June&quot;,
IF(MONTH(CloseDate) = 7, &quot;July&quot;,
IF(MONTH(CloseDate) = 8, &quot;August&quot;,
IF(MONTH(CloseDate) = 9, &quot;September&quot;,
IF(MONTH(CloseDate) = 10, &quot;October&quot;,
IF(MONTH(CloseDate) = 11, &quot;November&quot;,
&quot;December&quot;)))))))))))</formula>
        <label>Enquiry Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>O_Enquiry_Week_Actual__c</fullName>
        <formula>CEILING(((CloseDate - DATE(YEAR(CloseDate), 1, 1) + 1) +
MOD(DATE(YEAR(CloseDate), 1, 1) - DATE(1900, 1, 7), 7)) / 7)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Enquiry Week Actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>O_Enquiry_Week__c</fullName>
        <label>Enquiry Week</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>O_Enquiry_Year__c</fullName>
        <formula>YEAR(CloseDate)</formula>
        <label>Enquiry Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>O_Enquiry_to_Departure__c</fullName>
        <formula>O_Departure_Date__c -  CloseDate</formula>
        <label>Enquiry to Departure</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>O_Enquiry_to_Quote__c</fullName>
        <formula>O_Quote_Date__c -  CloseDate</formula>
        <label>Enquiry to Quote</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>O_Exchange_Rate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Exchange Rate</label>
        <referenceTo>Exchange_Rate__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>O_FFP_Charges__c</fullName>
        <label>FFP Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>O_FX_Transaction_Charges__c</fullName>
        <label>FX Transaction Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>O_FX_transfer_charges__c</fullName>
        <label>FX transfer charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>O_Finders_Commission__c</fullName>
        <label>Finder&apos;s Commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>O_Flexiable_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flexiable Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>O_Flexibility_Details__c</fullName>
        <label>Flexibility Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>O_Follow_Up_Time__c</fullName>
        <label>Follow Up Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>O_HE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>O_HolTypeCode__c</fullName>
        <label>HolTypeCode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>O_Holiday_Enquiry_Recap_Description__c</fullName>
        <label>Holiday Enquiry Recap Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>O_Holiday_Enquiry_Stage__c</fullName>
        <label>Holiday Enquiry Stage</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>O_Holiday_Grouping__c</fullName>
        <label>Holiday Type For Content Only</label>
        <picklist>
            <picklistValues>
                <fullName>Big Short Break</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chalet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>City break</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>European Beach Escape</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expert Led Journey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Long haul</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Safari</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Skiing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Villa</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
</CustomObject>